; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/syssetup/extr_wizard.c_CenterWindow.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/syssetup/extr_wizard.c_CenterWindow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@HWND_TOP = common dso_local global i32 0, align 4
@SWP_NOSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @CenterWindow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CenterWindow(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = alloca %struct.TYPE_3__, align 4
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @GetParent(i32* %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32* (...) @GetDesktopWindow()
  store i32* %12, i32** %4, align 8
  br label %13

13:                                               ; preds = %11, %1
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @GetWindowRect(i32* %14, %struct.TYPE_3__* %5)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @GetWindowRect(i32* %16, %struct.TYPE_3__* %6)
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* @HWND_TOP, align 4
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = sub nsw i32 %21, %23
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = sub nsw i32 %26, %28
  %30 = sub nsw i32 %24, %29
  %31 = sdiv i32 %30, 2
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %35 = load i32, i32* %34, align 4
  %36 = sub nsw i32 %33, %35
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 3
  %40 = load i32, i32* %39, align 4
  %41 = sub nsw i32 %38, %40
  %42 = sub nsw i32 %36, %41
  %43 = sdiv i32 %42, 2
  %44 = load i32, i32* @SWP_NOSIZE, align 4
  %45 = call i32 @SetWindowPos(i32* %18, i32 %19, i32 %31, i32 %43, i32 0, i32 0, i32 %44)
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i32* @GetParent(i32*) #1

declare dso_local i32* @GetDesktopWindow(...) #1

declare dso_local i32 @GetWindowRect(i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @SetWindowPos(i32*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
